--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
     "vue": "^3.4.19",
-    "vue-router": "^4.3.0"
+    "vue-router": "^4.3.0",
+    "yarn": "^1.22.21"
   },
   "devDependencies": {
     "@nuxtjs/tailwindcss": "^6.11.4",
